fix: enhance pipeline processing
